# service/src/main/java/me/pabloestrada/api/PersonalWebsiteService.java
@@ -1,6 +1,7 @@
 package me.pabloestrada.api;
 
 import me.pabloestrada.core.personalwebsite.websiteinfo.FullWebsiteInfo;
+import org.bson.types.ObjectId;
 
 public abstract class PersonalWebsiteService {
     public abstract FullWebsiteInfo getWebsiteInfo();
@@ -9,6 +10,6 @@ public abstract class PersonalWebsiteService {
                                                final String listOfTools, final String listOfLanguages, final String resumePath);
     public abstract void updateProjectInfo(final String name, final String type, final String description, final String funFact,
                                            final String url, final String imagePath, final int year, final String id);
-    public abstract void addProjectInfo(final String name, final String type, final String description, final String funFact,
-                                        final String url, final String imagePath, final int year);
+    public abstract ObjectId addProjectInfo(final String name, final String type, final String description, final String funFact,
+                                            final String url, final String imagePath, final int year);
 }
