# service/src/main/java/me/pabloestrada/core/personalwebsite/ObjectIdSerializer.java
@@ -1,0 +1,16 @@
+package me.pabloestrada.core.personalwebsite;
+
+import com.fasterxml.jackson.core.JsonGenerator;
+import com.fasterxml.jackson.databind.JsonSerializer;
+import com.fasterxml.jackson.databind.SerializerProvider;
+import org.bson.types.ObjectId;
+
+import java.io.IOException;
+
+public class ObjectIdSerializer extends JsonSerializer<ObjectId> {
+    @Override
+    public void serialize(final ObjectId objectId, final JsonGenerator jsonGenerator,
+                          final SerializerProvider serializerProvider) throws IOException {
+        jsonGenerator.writeString(objectId.toString());
+    }
+}
